[package]
name = "data_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4.4.11", features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1.0", features = ["v4"] }
indicatif = "0.16.2"
rand = "0.8.5"
console = "0.15.8"
time = "0.3.32"
dashmap = "5.5.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0.144", features = ["derive"]}
conv = "0.3.3"
log = "0.4.21"
sonyflake = "0.2"
rs-snowflake = "*"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["runtime-tokio-rustls", "macros", "mysql"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
